errors.txt
poisson.cpp:101:2: error: use of undeclared identifier 'mtl'
        mtl::vec::mat_cvec_multiplier<IdentityMatrix, Vector> operator*(const Vector& v) const {
        ^
poisson.cpp:101:31: error: expected member name or ';' after declaration specifiers
        mtl::vec::mat_cvec_multiplier<IdentityMatrix, Vector> operator*(const Vector& v) const {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
poisson.cpp:92:12: error: use of undeclared identifier 'calculate_A'
                                sum += calculate_A(i, j) * v[j];
                                       ^
poisson.cpp:130:11: error: 'g' is a private member of 'GraphSymmetricMatrix'
        return A.g->num_nodes() * A.g->num_nodes(); 
                 ^
poisson.cpp:42:19: note: implicitly declared private here
        const GraphType* g;
                         ^
poisson.cpp:130:30: error: 'g' is a private member of 'GraphSymmetricMatrix'
        return A.g->num_nodes() * A.g->num_nodes(); 
                                    ^
poisson.cpp:42:19: note: implicitly declared private here
        const GraphType* g;
                         ^
poisson.cpp:133:11: error: 'g' is a private member of 'GraphSymmetricMatrix'
        return A.g->num_nodes(); 
                 ^
poisson.cpp:42:19: note: implicitly declared private here
        const GraphType* g;
                         ^
poisson.cpp:136:11: error: 'g' is a private member of 'GraphSymmetricMatrix'
        return A.g->num_nodes(); 
                 ^
poisson.cpp:42:19: note: implicitly declared private here
        const GraphType* g;
                         ^
poisson.cpp:145:8: error: explicit specialization of non-template struct 'ashape_aux'
struct ashape_aux<GraphSymmetricMatrix> {
       ^         ~~~~~~~~~~~~~~~~~~~~~~
poisson.cpp:146:10: error: unknown type name 'nonscal'
        typedef nonscal type;
                ^
poisson.cpp:153:8: error: explicit specialization of non-template struct 'Collection'
struct Collection<GraphSymmetricMatrix> {
       ^         ~~~~~~~~~~~~~~~~~~~~~~
10 errors generated.
make: *** [poisson.o] Error 1
